Cherry-pick 256462@main (a203e214d6b8). https://bugs.webkit.org/show_bug.cgi?id=245959

REGRESSION (iOS 16): AR QuickLook banner tap event no longer propagated to anchor if not attached to DOM
    https://bugs.webkit.org/show_bug.cgi?id=245959
    rdar://100952298

    Reviewed by Wenson Hsieh.

    The commit https://commits.webkit.org/251042@main added a check `!element->isConnected()`
    in `Document::dispatchSystemPreviewActionEvent` to ensure the element is part
    of the DOM before sending the `_apple_ar_quicklook_button_tapped` event.

    However, this broke behavior in the case of a detached element, and so this PR
    reverts that check to maintain the existing behavior.

    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::dispatchSystemPreviewActionEvent):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/SystemPreview.mm:
    (-[TestSystemPreviewTriggeredHandler userContentController:didReceiveScriptMessage:]):
    (-[TestSystemPreviewTriggeredOnDetachedElementHandler userContentController:didReceiveScriptMessage:]):
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/system-preview-trigger.html:

    Canonical link: https://commits.webkit.org/256462@main